# chemdeep

./: .gitignore  LICENSE  README.md  RELEASE_GITHUB.md  UV_README.md  bootstrap.ps1  check_db.py  check_proxy.py  check_search.py  debug_import.py  debug_test_commands.py  debug_test_commands_v2.py  fix_paths.py  main.py  pyproject.toml  reproduce_hash.py  requirements.lock.txt  requirements.txt  tg_bot.py
_legacy/: README.md  bot_handlers_old.py  fetcher.py  main.py
apps/telegram_bot/: README.md  client.py  command_registry.py  main.py  runner.py
config/: .env.sample  paper-search-mcp-nodejs.env.example  settings.py
core/: ai.py  analyzer.py  cf_manager.py  cli_commands.py  mcp_client.py  mcp_search.py  reasoning.py  scholar_search.py  search.py  wos_search.py
core/analysis/: deep_chemist.py  prompts.py
core/browser/: __init__.py  (+3 more)
mcp-websearch/: .gitignore  README.md  pyproject.toml  search_mcp.py
mcp_server/: README.md  SETUP.md  cherry-studio-config.json  pyproject.toml  server.py  start_server.bat
paper-search-mcp-nodejs/: .gitignore  README-sc.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
skills/: README.md
tests/: debug_test_t5.py  test_bot_commands.py  test_bot_mobile_ui.py  test_citation_providers.py  test_debug.txt  test_e2e_pipeline.py  test_history.py  test_interactive_error.py  test_log.txt  test_observability.py  test_out.txt  test_output.txt  test_p59.py  test_p63.py  test_reliability.py  test_reporter_snowball.py  test_result.txt
utils/: db.py  logging_setup.py  notifier.py  test_deep_research.py
(+110 files in other folders)
