[project]
name = "chemdeep"
version = "0.1.0"
description = "AI驱动的化学研究深度分析工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx[socks]>=0.25.0",
    "playwright>=1.40.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "duckduckgo-search>=4.0.0",
    "mcp>=1.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
chemdeep = "tg_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
